@@ -1,13 +1,12 @@
 #include "gtest/gtest.h"
 #include "DocumentParser/DocumentParser.Infrastructure/NamespaceAliases.h"
+#include "DocumentParser/DocumentParser.Infrastructure/Defines.h"
 #include "DocumentParser/DocumentParser.Business/DocumentParser.Business.Engine/SearchMethodFactory.h"
 
 TEST(SearchMethodFactoryTests, SampleTest)
 {
-	DPBE::SearchMethodFactory factory;
-	factory.GenerateSearchMethod(0);
-	factory.GenerateSearchMethod(1);
-	factory.GenerateSearchMethod(2);
-	factory.GenerateSearchMethod(3);
+	DPBE::GenerateSearchMethod(DPI::StringMatch);
+	DPBE::GenerateSearchMethod(DPI::RegEx);
+	DPBE::GenerateSearchMethod(DPI::Indexed);
 	ASSERT_TRUE(true);
 }
