@@ -1,33 +1,31 @@
 #pragma once
 
 #include <memory>
+#include <stdexcept>
 #include "DocumentParser/DocumentParser.Infrastructure/NamespaceAliases.h"
+#include "DocumentParser/DocumentParser.Infrastructure/Defines.h"
 #include "DocumentParser/DocumentParser.Business/DocumentParser.Business.Engine/StringMatchMethod.h"
+#include "DocumentParser/DocumentParser.Business/DocumentParser.Business.Engine/RegExMethod.h"
+#include "DocumentParser/DocumentParser.Business/DocumentParser.Business.Engine/IndexedMethod.h"
 
 namespace DocumentParser { namespace Business { namespace Engine { 
-	class SearchMethodFactory
+	static std::shared_ptr<DPBE::ISearchMethod> GenerateSearchMethod(DPI::SearchMethod searchMethodType)
 	{
-	public:
-		SearchMethodFactory() {}
-		~SearchMethodFactory() {}
-		std::unique_ptr<DPBE::ISearchMethod> GenerateSearchMethod(int searchMethod)
+		std::shared_ptr<DPBE::ISearchMethod> searchMethod;
+		switch(searchMethodType)
 		{
-			switch(searchMethod)
-			{
-				case 1:
-					std::cout << "Creating String Match Method\n";
-					break;
-				case 2:
-					std::cout << "Creating RegEx Search Method\n";
-					break;
-				case 3:
-					std::cout << "Creating Indexed Search Method\n";
-					break;
-				default:
-					std::cout << "Unknown Search Method\n";
-					break;
-			};
-			return std::unique_ptr<DPBE::StringMatchMethod>();
-		}
-	};
+			case DPI::StringMatch:
+				searchMethod = std::shared_ptr<DPBE::StringMatchMethod>(new DPBE::StringMatchMethod());
+				break;
+			case DPI::RegEx:
+				searchMethod = std::shared_ptr<DPBE::RegExMethod>(new DPBE::RegExMethod());
+				break;
+			case DPI::Indexed:
+				searchMethod = std::shared_ptr<DPBE::IndexedMethod>(new DPBE::IndexedMethod());
+				break;
+			default:
+				throw std::invalid_argument("Invalid search method type received");
+		};
+		return searchMethod;
+	}
 }}}
