@@ -1,9 +1,12 @@
 #include "DocumentParser/DocumentParser.Business/DocumentParser.Business.Engine/StringMatchMethod.h"
 
+#include <iostream>
+
 using DocumentParser::Business::Engine::StringMatchMethod;
 
 StringMatchMethod::StringMatchMethod()
 {
+	std::cout << "CREATING STRING MATCH\n";
 }
 
 StringMatchMethod::~StringMatchMethod()
