@@ -1,0 +1,11 @@
+#include "DocumentParser/DocumentParser.Infrastructure/Document.h"
+
+using DocumentParser::Infrastructure::Document;
+
+Document::Document()
+{
+}
+
+Document::~Document()
+{
+}
