@@ -1,0 +1,10 @@
+#pragma once
+
+namespace DocumentParser { namespace Infrastructure {
+	class Document
+	{
+	public:
+		Document();
+		~Document();
+	};
+}}
